Upgrade: AI Bug Solver with Mistral-7B

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,8 +14,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>🐞 AI Bug Tracker</h1>
-            <p class="subtitle">Intelligent bug categorization and summarization</p>
+            <h1>🪲 AI Bug Solver</h1>
+            <p class="subtitle">Get instant technical steps to solve your code issues</p>
         </header>
 
         <section class="card">
