Fix: Push pending frontend formatting changes (marked.js integration)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <header>
             <h1>🪲 AI Bug Solver</h1>
-            <p class="subtitle">Get instant technical steps to solve your code issues</p>
+            <p class="subtitle">Powered by Google Gemini - Instant Fixes</p>
         </header>
 
         <section class="card">
@@ -42,6 +42,7 @@
         </section>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="script.js"></script>
 </body>
 
