Feat: Add SEO meta tags to improve searchability and social sharing

--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -4,7 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Bug Tracker | Dashboard</title>
+    <title>AI Bug Solver | Instant Technical Solutions</title>
+    <meta name="description"
+        content="Free AI-powered Bug Solver. Submit your coding error and get a step-by-step technical solution instantly. Powered by Google Gemini.">
+    <meta name="keywords"
+        content="AI bug fixer, code debugger, gemini ai, python, javascript, coding help, stackoverflow alternative">
+
+    <!-- Open Graph (WhatsApp/LinkedIn Previews) -->
+    <meta property="og:title" content="AI Bug Solver | Fix Code Instantly">
+    <meta property="og:description"
+        content="Don't struggle with errors. Get instant, step-by-step fixes for your bugs using AI.">
+    <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/2103/2103633.png">
+    <meta property="og:url" content="https://ai-bug-tracker-obl1.onrender.com/">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
