Add developer credit - Mohammed Kabeer in header and footer

--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -28,6 +28,7 @@
         <header>
             <h1>🪲 AI Bug Solver</h1>
             <p class="subtitle">Powered by Google Gemini - Instant Fixes</p>
+            <p class="developer-credit">Developed by Mohammed Kabeer</p>
         </header>
 
         <section class="card">
@@ -53,6 +54,10 @@
             </div>
         </section>
     </div>
+
+    <footer class="footer">
+        <p>© 2025 | Developed by Mohammed Kabeer</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="script.js"></script>
